// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the MediaCollection 1`] = `
<div>
  <div>
    <div
      class="collectionSection"
    >
      <div
        class="left"
      >
        <ul
          class="breadcrumb"
        >
          <li>
            <button
              class="item"
              disabled=""
              type="button"
            >
              sulu_media.all_media
            </button>
          </li>
        </ul>
      </div>
      <div
        class="right"
      >
        <div
          class="buttonGroup"
        >
          <button
            class="button icon hasText button"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus buttonIcon"
            />
            <span
              class="buttonText"
            >
              sulu_media.add_collection
            </span>
          </button>
          <button
            class="button icon button"
            type="button"
          >
            <span
              aria-label="su-cog"
              class="su-cog buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="divider"
  />
</div>
`;

exports[`Render the MediaCollection for all media 1`] = `
<div>
  <div>
    <div
      class="collectionSection"
    >
      <div
        class="left"
      >
        <ul
          class="breadcrumb"
        >
          <li>
            <button
              class="item"
              disabled=""
              type="button"
            >
              sulu_media.all_media
            </button>
          </li>
        </ul>
      </div>
      <div
        class="right"
      >
        <div
          class="buttonGroup"
        >
          <button
            class="button icon hasText button"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus buttonIcon"
            />
            <span
              class="buttonText"
            >
              sulu_media.add_collection
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="divider"
  />
</div>
`;
